src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLR1722_consider_using_sys_exit_6.py.snap
---
source: src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    UseSysExit: exit
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 4
  fix: ~
  parent: ~
- kind:
    UseSysExit: quit
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 4
  fix: ~
  parent: ~

