src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLW0602_global_variable_not_assigned.py.snap
---
source: src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    GlobalVariableNotAssigned: x
  location:
    row: 5
    column: 11
  end_location:
    row: 5
    column: 12
  fix: ~
  parent: ~
- kind:
    GlobalVariableNotAssigned: x
  location:
    row: 9
    column: 11
  end_location:
    row: 9
    column: 12
  fix: ~
  parent: ~

