src/rules/pylint/snapshots/ruff__rules__pylint__tests__ignore_arg_names.snap
---
source: src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    TooManyArgs:
      c_args: 6
      max_args: 5
  location:
    row: 4
    column: 0
  end_location:
    row: 5
    column: 8
  fix: ~
  parent: ~

