src/rules/pylint/snapshots/ruff__rules__pylint__tests__max_args.snap
---
source: src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    TooManyArgs:
      c_args: 8
      max_args: 4
  location:
    row: 1
    column: 0
  end_location:
    row: 2
    column: 8
  fix: ~
  parent: ~
- kind:
    TooManyArgs:
      c_args: 5
      max_args: 4
  location:
    row: 4
    column: 0
  end_location:
    row: 5
    column: 8
  fix: ~
  parent: ~
- kind:
    TooManyArgs:
      c_args: 6
      max_args: 4
  location:
    row: 16
    column: 0
  end_location:
    row: 17
    column: 8
  fix: ~
  parent: ~
- kind:
    TooManyArgs:
      c_args: 6
      max_args: 4
  location:
    row: 18
    column: 0
  end_location:
    row: 19
    column: 8
  fix: ~
  parent: ~

