src/rules/pylint/snapshots/ruff__rules__pylint__tests__max_args_with_dummy_variables.snap
---
source: src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    TooManyArgs:
      c_args: 6
      max_args: 5
  location:
    row: 9
    column: 0
  end_location:
    row: 10
    column: 8
  fix: ~
  parent: ~

